fixed some warnings, and willi goof